tests/ui/struct_empty_tuple.stderr
error: `TryFromRow`: cannot derive for empty tuple-struct
 --> tests/ui/struct_empty_tuple.rs:2:21
  |
2 | struct MyTupleStruct();
  |                     ^^
