tests/ui/struct_empty_tuple.rs
#[derive(pg_mapper::TryFromRow)]
struct MyTupleStruct();

fn main() {}
